--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,26 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
-     <!-- Logging -->
+     <!-- logging -->
     <logback.version>1.1.7</logback.version>
     <slf4j.version>1.7.21</slf4j.version>
   </properties>
   
   <dependencies>
+    <!-- mailing -->  
     <dependency>
         <groupId>javax.mail</groupId>
         <artifactId>mail</artifactId>
         <version>1.4</version>
     </dependency>
+    <!-- dependency for easy mail templates managing-->
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>1.7</version>
     </dependency>
-    <!-- Logging with SLF4J & LogBack -->
+    
+    <!-- logging with SLF4J & LogBack -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -46,6 +49,7 @@
       <scope>runtime</scope>
     </dependency>
     
+    <!-- database -->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
