--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
     <postgresql.version>9.4.1211</postgresql.version>
     
     <!-- spring -->
-    <spring.version>4.3.4.RELEASE</spring.version>
+    <spring.version>4.3.2.RELEASE</spring.version>
+    
+    <!--    Tests  -->
+    <junit.version>4.12</junit.version>
+    <hamcrest.version>1.3</hamcrest.version>
   </properties>
   
   <dependencies>
@@ -74,6 +78,11 @@
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>      
+    </dependency>
     
     <!-- spring -->
     <dependency>
@@ -87,5 +96,32 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
+     <!--Test-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>hamcrest-core</artifactId>
+          <groupId>org.hamcrest</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>${hamcrest.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  
 </project>
