--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,7 +1,8 @@
 #database config
 
 database.init=true
-database.driverClassName=org.postresql.Driver
+
+database.driverClassName=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5432/familyBudget
 database.username=postgres
 database.password=postgres
