--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,8 +1,12 @@
 #database config
 
+database.driverClassName=org.postgresql.Driver
 database.init=true
 
-database.driverClassName=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5432/familyBudget
 database.username=postgres
 database.password=postgres
+
+jpa.showSql=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
