--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -10,3 +10,5 @@ database.password=postgres
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+
+jdbc.initLocation=initDB_postgres.sql
