--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
 
-		<hibernate.version>4.3.8.Final</hibernate.version>
+<!-- 		<hibernate.version>4.3.8.Final</hibernate.version> -->
+		<hibernate.version>5.2.10.Final</hibernate.version>
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 	</properties>
 
