Add maven and spring profiles for hsqldb and postgres

--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,6 +1,6 @@
 
-database.url=jdbc:hsqldb:file:D:/temp/familybudget
-#database.url=jdbc:hsqldb:mem:familybudget
+#database.url=jdbc:hsqldb:file:D:/temp/familybudget
+database.url=jdbc:hsqldb:mem:familybudget
 
 database.username=sa
 database.password=
