--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<spring.version>4.3.2.RELEASE</spring.version>
 		<spring-data-jpa.version>1.10.4.RELEASE</spring-data-jpa.version>
 
+		<ehcache.version>2.10.2.2.21</ehcache.version>
+
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
 
@@ -58,7 +60,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -75,6 +76,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>${hibernate-validator.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>${ehcache.version}</version>
 		</dependency>
 
 		<dependency>
@@ -98,7 +105,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
