--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -8,6 +8,8 @@ database.driverClassName=org.hsqldb.jdbcDriver
 
 database.init=true
 jdbc.initLocation=initDB_hsql.sql
-jpa.showSql=true
-hibernate.format_sql=true
+
+jpa.showSql=false
+hibernate.format_sql=false
 hibernate.use_sql_comments=true
+hibernate.generate_statistics=true
