--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -10,5 +10,6 @@ database.password=postgres
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+hibernate.generate_statistics=true
 
 jdbc.initLocation=initDB_postgres.sql
