add tomcat plugin to maven

--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 	<groupId>org.andsav</groupId>
 	<artifactId>familyBudgetManager</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 
-	<name>familyBudgetManager</name>
+	<name>Family Budget Manager</name>
 	<url>http://familyBudgetManager.herokuapp.com/</url>
 
 	<properties>
@@ -32,11 +32,36 @@
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
 
-		<!-- <hibernate.version>4.3.8.Final</hibernate.version> -->
 		<hibernate.version>5.2.10.Final</hibernate.version>
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 	</properties>
 
+	<build>
+	<finalName>familyBudgetManager</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<contextFile>src/main/resources/tomcat/context.xml</contextFile>
+					<systemProperties>
+						<file.encoding>UTF-8</file.encoding>
+						<spring.profiles.active>tomcat,datajpa</spring.profiles.active>
+					</systemProperties>
+					<protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${postgresql.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<dependencies>
 
 		<!-- logging with SLF4J & LogBack -->
@@ -111,7 +136,7 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
