--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
 		<hibernate.version>5.2.10.Final</hibernate.version>
 		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
+		<jackson-databind-version>2.7.0</jackson-databind-version>
 	</properties>
 
 	<build>
@@ -178,6 +179,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson-databind-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.8.4</version>
 		</dependency>
 	</dependencies>
 
